# JADBioPythonClient

./: .gitignore  README.md  jad_http_client.py  meta.yaml  requirements.txt  setup.cfg  setup.py
docs/source/: conf.py  index.rst
docs/src/: conf.py  index.rst
examples/: example.py  helper.py  image_upload.py  image_upload1.py  image_upload2.py
examples/resources/: Alzheimer.csv  Alzheimer_no_trgt.csv  iris.csv  iris_no_trgt.csv
jadbio/: auth.py  client.py  task.py
