[metadata]
name = jadbio
version = attr: jadbio.__version__
description = This is a python wrapper for the public JADBio REST API.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3.0
license_file = LICENSE
url = https://github.com/JADBio/JADBioPythonClient
author = JADBio
author_email = support@jadbio.com
keywords = jadbio automl machine-learning
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    Homepage=https://jadbio.com/
    API Docs=https://support.jadbio.com/api/
    Github=https://github.com/JADBio/JADBioPythonClient

[options]
packages = jadbio
install_requires =
    requests_toolbelt>=0.9.1
    requests>=2.25.0
    sphinx>=4.4.0
    toml>=0.10.0
python_requires = >=3.0
include_package_data = True
