[metadata]
name = jadbio
version = attr: jadbio.__version__
description = A python wrapper for the public JADBio REST API.
license = GPL3.0
license_file = LICENSE
url = https://github.com/JADBio/JADBioPythonClient
author = JADBio
author_email = support@jadbio.com
keywords = jadbio automl machine-learning
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = jadbio
install_requires =
    requests_toolbelt>=0.9.1
    requests>=2.25.0
    sphinx>=4.4.0
    sphinx-markdown-builder>=0.5.5
    toml>=0.10.0
python_requires = >=3.0
